--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
         <title>Pong Canvas</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="../public/style.css" type="text/css" />
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -23,13 +23,13 @@
           <div class="container">
             <canvas 
               ref="game"
-              id="game-window" 
-              width="400" 
-              height="400"
+              id="gameScreen" 
+              width="800" 
+              height="600"
               style="border:1px solid #000000"
             >
             </canvas>
           </div>
-        <script src="" async defer></script>
+        <script src="../public/index.mjs" async defer></script>
     </body>
 </html>
