--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -13,11 +9,8 @@
         <link rel="stylesheet" href="../public/style.css" type="text/css" />
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
         <header>
-            <h1>Secure Real Time Multiplayer Game</h1>
+            <h1>J Pong</h1>
           </header>
           <hr style="margin: 25px" />
           <div class="container">
@@ -30,6 +23,6 @@
             >
             </canvas>
           </div>
-        <script src="../public/index.mjs" async defer></script>
+        <script type="module" src="../public/index.mjs" async defer></script>
     </body>
 </html>
