added inputHandler and Ball

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
             <h1>J Pong</h1>
           </header>
           <hr style="margin: 25px" />
+          <img id ="img_ball" class="img_ball" src="../public/images/ball.png">
           <div class="container">
             <canvas 
               ref="game"
