refactor to add detect collision

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
           </header>
           <hr style="margin: 25px" />
           <img id ="img_ball" class="img_ball" src="../public/images/ball.png">
+          <img id ="img_brick" class="img_brick" src="../public/images/brick.png">
           <div class="container">
             <canvas 
               ref="game"
