--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,9 @@ canvas {
 .img_ball{
   display: none;
 }
+.img_brick{
+  display: none;
+}
 .container {
   display: flex;
   flex-direction: column;
